--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ kyber-fpga.cache/wt/webtalk_pa.xml
 kyber-fpga.cache/wt/project.wpc
 kyber-fpga.cache/wt/java_command_handlers.wdf
 kyber-fpga.cache/wt/gui_handlers.wdf
+*.snap
